[project]
name = "pkit"
version = "0.1.0"
description = "Python toolkit"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "questionary>=2.1.1",
]

[project.scripts]
uvrun = "uvrun.main:main"
checkversion = "checkversion.main:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.workspace]
members = [
    "tests/sample",
]

